test/extern/ferguson/c-array/c_array-generic.good
c_array-generic.chpl:5: error: c_array element type cannot be generic
