test/extern/ferguson/c-array/c_array-generic.chpl
use CTypes;

record R {type t;}

var a = new c_array(R(?), 10);
